# Open-Gl-Plane

./: CMakeLists.txt  Callbacks.c  Callbacks.cpp  Callbacks.h  HelloGLUT.c  README.md  openGL_3dEngine.cpp
data/: cesna.3ds  cesna_tex.3ds  k.3ds  k_l.3ds  k_p.3ds  l_l.3ds  l_p.3ds  rondo_good.3ds  teren.3ds  w_l.3ds  w_p.3ds
include/: Vector.h  model3DS.cpp  model3DS.h  textureBMP.cpp  textureBMP.h  textureTGA.cpp  textureTGA.h
model/: Airplane.cpp  Airplane.h  Vector.cpp  Vector.h  Wind.cpp  Wind.h
models/: Airplane.cpp  Airplane.h  Vector.cpp  Vector.h
src/: Camera.h  Collisions.h  InitMethods.h  Interaction.h  Window.h
